Parsing combined Dosisschema as well